--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-textarea-autosize": "^8.3.3",
     "strings-to-regex": "^1.2.0",
     "use-debounce": "^6.0.1",
+    "valid-url": "^1.0.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
